---------------------------------------------------------------------------------------------------
Version: 0.1.13
Date: ???
  Changes:
    - Personal shields recharge proportionally with hit points
    - Moved quality enhancing machines to their own tab
    - Moved deleveler to the end of its subgroup so buildings fit nicer
  Bug fixes:
    - Fixed names of machines with quality modules
    - Fixed quality enhancing machines order
    - Fixed quality enhancing machine programming unlocks
---------------------------------------------------------------------------------------------------
Version: 0.1.12
Date: 2023.11.18
  Changes:
    - Equipment quality pips returned to center to fix display when hovering
  Bug fixes:
    - Fixed personal roboports losing quality
    - Support for energy values with uppercase "K"
    - Fixed roboport internal battery too small
---------------------------------------------------------------------------------------------------
Version: 0.1.11
Date: 2023.11.15
  Changes:
    - Added tooltips for quality modules
  Bug fixes:
    - Fixed technology unlocks causes a stack overflow in certain cases
---------------------------------------------------------------------------------------------------
Version: 0.1.10
Date: 2023.11.14
  Changes:
    - Added deleveler and deleveling recipes
  Bug fixes:
    - Fixed equipment quality overlays
    - Fixed recycling of certain items
---------------------------------------------------------------------------------------------------
Version: 0.1.9
Date: 2023.11.12
  Changes:
    - Allow for 2x modules in AM3 to allow 2x prod/eff modules
    - More visible quality overlays
  Bug fixes:
    - Fixed normal productivity modules not working for higher quality recipes
    - Support creative-mod
    - Fixed dark_background_icons on quality
---------------------------------------------------------------------------------------------------
Version: 0.1.8
Date: 2023.11.11
  Bug fixes: