@@ -13,6 +13,7 @@ quality_modules = [Image.open(f"quality-module-{i + 1}.png") for i in range(max_
 black_background = Image.open(os.path.join(gfx_path, "entity-info-dark-background.png"))
 nightvision = Image.open(os.path.join(gfx_path, "color_luts", "nightvision.png"))
 day = Image.open(os.path.join(gfx_path, "color_luts", "identity-lut.png"))
+quality_tint = Image.open("quality-tint.png")
 
 for i, q in enumerate(qualities):
     im = Image.new("RGBA", (64, 64), (0, 0, 0, 0))
@@ -31,3 +32,16 @@ for i, qm in enumerate(quality_modules):
 for i, b in enumerate(bonuses):
     im = Image.blend(nightvision, day, b / max(bonuses))
     im.save(f"nv-quality-{i + 1}.png")
+
+
+im = Image.new("RGBA", (108, 32), (0, 0, 0, 0))
+for i in range(3):
+    im.alpha_composite(quality_tint, (i * 36 + 4, 20))
+im.save("hr-beacon-quality-mask-1.png")
+im.resize((54, 16)).save("beacon-quality-mask-1.png")
+
+im = Image.new("RGBA", (108, 26), (0, 0, 0, 0))
+for i in range(3):
+    im.alpha_composite(quality_tint, (i * 36 + 4, 12))
+im.save("hr-beacon-quality-mask-2.png")
+im.resize((54, 13)).save("beacon-quality-mask-2.png")
